<resources>
    <string name="app_name">FitAssist</string>
    <string name="headerFirstpage">Welcome to FitAssist</string>
    <string name="description_textFirstPage">Lets start your fitness journey! We all help you every step of the way. Firstly, tell us a little bit about yourself.</string>
    <string name="button_getStarted">Get Started</string>
    <string name="menu_mybody">My Body</string>
    <string name="menu_home">Home</string>
    <string name="select_gender">Select Your Gender</string>
    <string name="woman">Woman</string>
    <string name="man">Man</string>
    <string name="next">Next </string>
    <string name="e_weight">Enter your weight</string>
    <string name="e_height">Enter your height</string>
    <string name="e_age">Enter your age</string>
    <string name="years">Years</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="gallery">Add from Gallery</string>
    <string name="camera">Add from Camera</string>
    <string name="upload_image">Upload Image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_classifier_failed">Fail</string>
    <string name="feedback">Feedback</string>
    <string name="libraryvideo">Library Video</string>
    <string name="history">History</string>
    <string name="chest">Chest</string>
    <string name="forearms">Forearms</string>
    <string name="glutes">Glutes</string>
    <string name="hamstrings">Hamstrings</string>
    <string name="lats">Lats</string>
    <string name="lower_back">Lower Back</string>
    <string name="middle_back">Middle Back</string>
    <string name="quadriceps">Quadriceps</string>
    <string name="shoulders">Shoulders</string>
    <string name="triceps">Triceps</string>
    <string name="bmi">BMI</string>
    <string name="bmr">BMR</string>
    <string name="water_intake">Water Intake</string>
    <string name="calc_nutrition">Calculate Nutrition</string>
    <string name="header_mybody">Check Your Body and Calculate Nutrition for Your Favorite Indonesian Food!</string>
    <string name="running_calories_tracker">Running Calories Tracker</string>
    <string name="button_homepage">Scan Gym Equipment</string>
    <string name="title_homepage">Classify Gym and Fitness Equipment Quickly and Easily</string>
    <string name="description_homepage">Get information about each tool, including how to use it and its benefits</string>
    <string name="choose_activity_exercise">Select a Activity Exercise</string>
    <string name="burn_calories">Burn Calories</string>
    <string name="nama_makanan">Nama Makanan</string>
    <string name="berat_makanan_gram">Berat Makanan (gram)</string>
    <string name="hitung">Hitung</string>
    <string name="send">Send</string>
    <string name="enter_description">Enter Description</string>
    <string name="submit">Submit</string>
    <string name="nutrition_food">Nutrition Food</string>
    <string name="name_food_indo">Name Indonesian Food</string>
    <string name="food_weight_gram">Food weight(gram)</string>
    <string name="calculate">Calculate</string>
    <string name="bmi_header">BMI</string>
    <string name="enter_your_height_cm">Enter your height (cm)</string>
    <string name="enter_your_weight_kg">Enter your Weight (kg)</string>
    <string name="bmr_header">BMR</string>
    <string name="enter_your_age">Enter your Age</string>
    <string name="hydration">Hydration</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="detail_exercise">Detail Exercise</string>
    <string name="video_tutorial">Video Tutorial</string>
    <string name="body_part">Body Part</string>
    <string name="capstone_c241_ps122">Capstone C241-PS122</string>
    <string name="finish">Finish</string>
    <string name="_00_00">00:00</string>
    <string name="start">Start</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure_you_want_to_proceed">Are you sure you want to proceed?</string>
    <string name="add_with_gallery_or_camera">Add with Gallery or Camera</string>
    <string name="retry">Retry</string>
    <string name="please_check_your_internet_connection_and_try_again">Please check your internet connection and try again.</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="level">Level</string>
    <string name="equipment">Equipment</string>
    <string name="abdominals">Abdominals</string>
    <string name="search_on_youtube">Search on YouTube</string>
    <string name="bmi_body_mass_index">BMI (Body Mass Index)</string>
    <string name="bmr_basal_metabolic_rate">BMR (Basal Metabolic Rate)</string>
    <string name="nutrition_indonesia_food">Nutrition Indonesia Food</string>
    <string name="indonesian_food_nutrition_calculator">Indonesian Food Nutrition Calculator</string>
    <string name="fitassist">FitAssist</string>
    <string-array name="gender_array">
        <item>Man</item>
        <item>Woman</item>
    </string-array>
</resources>