<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/background_alert"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvDialogMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/are_you_sure_you_want_to_proceed"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/colorTextgrey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnYes"
            android:layout_width="160dp"
            android:layout_height="58dp"
            android:text="@string/yes"
            android:textColor="@color/colorTextgrey"
            android:background="@drawable/button_reset"
            android:layout_marginEnd="25dp"/>

        <Button
            android:id="@+id/btnNo"
            android:layout_width="160dp"
            android:layout_height="58dp"
            android:textColor="@color/colorTextgrey"
            android:background="@drawable/button_primary"
            android:text="@string/no"/>
    </LinearLayout>

</LinearLayout>
