<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextureView
        android:id="@+id/textureView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY" />
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/view_video"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@android:color/transparent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/headerFirstpage"
            android:fontFamily="@font/roboto_medium"
            android:textSize="22sp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="175dp"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_textFirstPage"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_reguler"
            android:layout_margin="15dp"
            android:textAlignment="center"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/btnStarted"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:background="@drawable/button_light"
            android:textSize="18sp"
            android:layout_margin="15dp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/background"
            android:text="@string/button_getStarted"
            android:elevation="10dp"
            android:textAllCaps="false"/>

    </LinearLayout>
</FrameLayout>
