<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".ui.mainMenu.MyBodyFragment">
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/btnNavigateBMI"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="300dp"
                android:background="@drawable/selector_card_mybody"
                android:elevation="10dp"
                android:fontFamily="@font/roboto_medium"
                android:padding="8dp"
                android:text="@string/bmi_body_mass_index"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/colorTextgrey"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnNavigateBMR"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="150dp"
                android:background="@drawable/selector_card_mybody"
                android:elevation="10dp"
                android:fontFamily="@font/roboto_medium"
                android:padding="8dp"
                android:text="@string/bmr_basal_metabolic_rate"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/colorTextgrey"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnNavigateHydration"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/selector_card_mybody"
                android:elevation="10dp"
                android:fontFamily="@font/roboto_medium"
                android:padding="8dp"
                android:text="@string/hydration"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/colorTextgrey"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnNavigateNutritionCalculate"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="-150dp"
                android:background="@drawable/selector_card_mybody"
                android:elevation="10dp"
                android:fontFamily="@font/roboto_medium"
                android:padding="8dp"
                android:text="@string/indonesian_food_nutrition_calculator"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/colorTextgrey"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/white"
        android:text="@string/header_mybody"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_medium"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/menu_mybody"
            android:layout_marginTop="40dp"
            android:layout_marginStart="85dp"
            android:fontFamily="@font/roboto_medium"
            android:textSize="20sp"
            android:textColor="@color/white"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/top_bar"
            android:layout_marginBottom="15dp"
            android:layout_gravity="bottom"/>
    </FrameLayout>

</FrameLayout>